--- a/style.css
+++ b/style.css
@@ -10,7 +10,24 @@ body{
     margin: 0;
     flex-direction: column;
     font-family: 'open Sans';
+     --s: 82px; /* control the size */
+  --c1: #b2b2b2;
+  --c2: #ffffff;
+  --c3: #d9d9d9;
+  
+  --_g: var(--c3) 0 120deg,#0000 0;
+  background:
+    conic-gradient(from -60deg at 50% calc(100%/3),var(--_g)),
+    conic-gradient(from 120deg at 50% calc(200%/3),var(--_g)),
+    conic-gradient(from  60deg at calc(200%/3),var(--c3) 60deg,var(--c2) 0 120deg,#0000 0),
+    conic-gradient(from 180deg at calc(100%/3),var(--c1) 60deg,var(--_g)),
+    linear-gradient(90deg,var(--c1)   calc(100%/6),var(--c2) 0 50%,
+                          var(--c1) 0 calc(500%/6),var(--c2) 0);
+  background-size: calc(1.732*var(--s)) var(--s);
 }
+
+
+
 .container{
     display: flex;
     justify-content: center;
@@ -29,7 +46,8 @@ body{
     flex-wrap: wrap;
     /* border: #455d7a solid; */
     border-radius: 5%;
-    background-color: #141010;
+    background-color: #000000;
+    box-shadow: 20px 20px 10px  #1d1c1c;
     
 }
 .calculator > div:not(.display){
